--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -137,3 +137,20 @@ html(lang="en" ng-app="3drepo")
 			}
 		}
 
+	if googleConversionId
+
+		// Google Code for Remarketing Tag
+		//
+			------------------------------------------------
+			Remarketing tags may not be associated with personally identifiable information or placed on pages related to sensitive categories. See more information and instructions on how to setup the tag on: http://google.com/ads/remarketingsetup
+			-------------------------------------------------
+		script(type='text/javascript').
+			/* <![CDATA[ */
+			var google_conversion_id = !{googleConversionId};
+			var google_custom_params = window.google_tag_params;
+			var google_remarketing_only = true;
+			/* ]]> */
+		script(type='text/javascript', src='//www.googleadservices.com/pagead/conversion.js')
+		noscript
+			div(style='display:inline;')
+				img(height='1', width='1', style='border-style:none;', alt='', src='//googleads.g.doubleclick.net/pagead/viewthroughconversion/#{googleConversionId}/?guid=ON&script=0')
