--- a/frontend/account/css/account.css
+++ b/frontend/account/css/account.css
@@ -516,6 +516,9 @@ account-projectsetting #accountTeamSubHeader {
   color: rgba(0, 0, 0, 0.5);
 }
 
+#federationDialog .projectDialogError{
+  color: #F44336;
+}
 /** Account Federations ***********************************************************************************************/
 account-federations .userContent {
   padding: 0 !important;
