ISSUE #343 - url for issue

--- a/frontend/account/jade/account.jade
+++ b/frontend/account/jade/account.jade
@@ -63,4 +63,5 @@ div(ng-if="vm.state.project")
 	project="vm.state.project"
 	branch="vm.state.branch"
 	revision="vm.state.revision"
+	issue-id="vm.state.issue"
 	state="vm.state")
