--- a/frontend/issues/jade/issues.jade
+++ b/frontend/issues/jade/issues.jade
@@ -33,6 +33,7 @@ md-progress-circular.importBCFLoading(md-mode="indeterminate", md-diameter="15",
 	user-roles="vm.projectUserRoles"
 	tree-map="vm.treeMap"
 	selected-issue="vm.selectedIssue"
+	display-issue="vm.displayIssue"
 	issue-display="vm.issueDisplay"
 	available-roles="vm.availableRoles"
 	)
