--- a/frontend/issues/jade/issueComp.jade
+++ b/frontend/issues/jade/issueComp.jade
@@ -162,7 +162,7 @@ div(flex, layout="column", layout-fill, tabindex="0", tdr-focus="true")
 			ng-focus="$ctrl.textInputHasFocus(true)"
 			ng-blur="$ctrl.textInputHasFocus(false)"
 			ng-disabled="!$ctrl.canComment"
-			placeholder="{{$ctrl.canComment ? 'Comment' : 'You do not have permission to leave comments'}}")
+			placeholder="{{$ctrl.canComment ? 'Comment' : ($ctrl.issueData.status === 'closed' ? 'You cannot comment on a closed issue' : 'You do not have permission to leave comments')}}")
 		.issueCompThumbnail(layout="row", layout-align="center", ng-if="$ctrl.commentThumbnail", ng-click="$ctrl.showThumbnail()")
 			img.issueCompThumbnailImage(ng-src="{{$ctrl.commentThumbnail}}")
 
