ISSUE #344 load viewer at home directive instead

--- a/frontend/home/jade/home.jade
+++ b/frontend/home/jade/home.jade
@@ -1,4 +1,5 @@
 img#homeBackground(src="/public/images/viewer_background.jpg")
+viewermanager
 #legalLinks(layout="row")
 	a(ng-repeat="display in vm.legalDisplays", target="_blank", href="{{display.page}}") {{display.title}}
 
