--- a/frontend/project/jade/project.jade
+++ b/frontend/project/jade/project.jade
@@ -3,7 +3,7 @@
 // tabindex is required for ng-keydown to work on a div/directive
 #project(ng-keydown="vm.keyAction($event)", ng-keyup="vm.keyAction($event)")
 	#project-viewport-container.row(tabindex="0", tdr-focus="true")
-		viewermanager
+		#viewermanager
 
 	#projectUI
 		revisions(
