--- a/frontend/account/jade/accountLicenses.jade
+++ b/frontend/account/jade/accountLicenses.jade
@@ -47,7 +47,9 @@
 									p {{license.user}}
 								.md-list-item(flex=25)
 									md-select(ng-change="vm.assignJob($index)" ng-model="license.job" aria-label="job" placeholder="Select a job")
+										md-option(value="") Unassign
 										md-option(ng-repeat="job in vm.jobs", value="{{job._id}}") {{job._id ? job._id : 'Unassign'}}
+
 
 							div(layout="row", layout-align="end center")
 								p#accountLicenseMessage {{license.deleteMessage}}
@@ -63,6 +65,40 @@
 										p Unassigned
 								md-button.md-icon-button(aria-label="Remove")
 									md-icon.angular-material-icons remove_circle
+
+					md-divider
+						
+
+					p Add a job
+					div(layout="row")
+						.md-list-item(flex="30")
+							md-input-container
+								label Job
+								input(
+								type="text"
+								ng-model="vm.newJob")
+						.md-list-item(flex="30")
+							md-button.md-raised.md-accent(ng-click="vm.addJob()") Add
+					div(layout="row" ng-if="vm.addJobMessage")
+						p {{vm.addJobMessage}}
+
+					section(ng-if='vm.jobs.length')
+						md-subheader
+							div Jobs
+
+					md-list-item(ng-repeat="job in vm.jobs", layout="row", layout-align="space-between", flex)
+						div(layout="row", layout-align="start center", flex)
+							md-icon.angular-material-icons.licenseIcon(aria-label="Job") work
+							.md-list-item-text(flex=30)
+								p {{job._id}}
+
+						div(layout="row", layout-align="end center")
+							md-button.md-icon-button.md-accent(ng-click="vm.removeJob($index)", aria-label="Close dialog")
+								md-icon.angular-material-icons remove_circle
+
+					p#accountLicenseMessage {{vm.deleteJobMessage}}
+					br
+					
 
 					div(ng-if="vm.allLicensesAssigned")
 						md-divider
