--- a/jade/frontend.jade
+++ b/jade/frontend.jade
@@ -28,22 +28,24 @@ html(lang="en" ng-app="3drepo")
 		each val, key in jsfiles
 			script(type="text/javascript", src=val)
 
-		if gaTrackId
-			script.
-				(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-				(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-				m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-				})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-				
+		if !development
+			if gaTrackId
+				script.
+					(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+					(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+					m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+					})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-
-		if gaTrackId && userId
-			script.
-				ga('create', '!{gaTrackId}', 'auto', { userId: '!{userId}' });
-		else
-			script.
-				ga('create', '!{gaTrackId}', 'auto');
+			if gaTrackId && userId
+				script.
+					ga('create', '!{gaTrackId}', 'auto', { userId: '!{userId}' });
+			else
+				script.
+					ga('create', '!{gaTrackId}', 'auto');
+		
+		else 
+			script(src="//localhost:35729/livereload.js", async, defer)
 
 
 		// Predefine the app
