--- a/frontend/account/jade/accountMenu.jade
+++ b/frontend/account/jade/accountMenu.jade
@@ -3,9 +3,9 @@ md-menu#accountMenu(md-position-mode="target-right target")
 		md-icon.angular-material-icons(md-menu-origin) account_circle
 	md-menu-content#accountMenuContent(width="3")
 		md-menu-item
-			md-button(ng-click="vm.showProjects()")
+			md-button(ng-click="vm.showModels()")
 				md-icon.angular-material-icons(md-menu-align-target) view_list
-				| Projects
+				| Models
 		md-menu-item
 			md-button(ng-click="vm.openUserManual()")
 				md-icon.angular-material-icons(md-menu-align-target) description
