--- a/frontend/account/jade/accountProfile.jade
+++ b/frontend/account/jade/accountProfile.jade
@@ -1,5 +1,5 @@
 .homeUserContent
-	md-content.md-whiteframe-1dp(aria-label="Projects", flex)
+	md-content.md-whiteframe-1dp(aria-label="Models", flex)
 		md-toolbar
 			.md-toolbar-tools
 				h2 Profile
