--- a/frontend/account/jade/accountTeam.jade
+++ b/frontend/account/jade/accountTeam.jade
@@ -30,11 +30,11 @@ md-content(layout-margin)
 					| to add licenses.
 
 		div(ng-switch-when="1+")
-			#project(layout="row", layout-align="start center")
+			#model(layout="row", layout-align="start center")
 				md-button.md-icon-button(aria-label="Dashboard")
 					md-icon.angular-material-icons(ng-if="!vm.item.federate") dashboard
 					md-icon.angular-material-icons(ng-if="vm.item.federate") border_all
-				p(flex) {{vm.item.project}}
+				p(flex) {{vm.item.model}}
 
 			div(ng-if="vm.noLicensesAssigned")
 				.cardInfo
