--- a/frontend/account/jade/paypalDialog.jade
+++ b/frontend/account/jade/paypalDialog.jade
@@ -11,4 +11,4 @@ md-dialog#paypalDialog(aria-label="New database")
 			br
 			div(ng-switch="vm.changeHelpToShow")
 				p(ng-switch-when="98")
-					| Please delete projects to reduce quota.
+					| Please delete models to reduce quota.
