--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -10,7 +10,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 			// Federation name
 			div(layout="row", flex)
 				md-input-container(flex="50")
-					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.project", ng-disabled="vm.federationOriginalData", ng-pattern="vm.projectRegExp" maxlength=20)
+					input(placeholder="Federation name", tdr-focus="true", ng-model="vm.newFederationData.model", ng-disabled="vm.federationOriginalData", ng-pattern="vm.modelRegExp" maxlength=20)
 					.inputHint(ng-if="!vm.federationOriginalData") Letters, numbers, hyphen and underscore only
 
 			div(ng-if="!vm.federationOriginalData" layout="row", flex)
@@ -28,20 +28,20 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 				div(layout="column", flex)
 					p(layout="row", layout-align="center center") Available
 					md-list
-						//md-list-item(ng-click="vm.toggleShowProjects($index)")
-							md-icon.angular-material-icons {{account.showProjectsIcon}}
+						//md-list-item(ng-click="vm.toggleShowModels($index)")
+							md-icon.angular-material-icons {{account.showModelsIcon}}
 							p {{account.account}}
 						md-list
-							md-list-item.federationProject(
-							ng-repeat="project in vm.userAccount.projects"
-							style="opacity:{{project.federated? 0.2 : 1.0}}")
+							md-list-item.federationModel(
+							ng-repeat="model in vm.userAccount.models"
+							style="opacity:{{model.federated? 0.2 : 1.0}}")
 								md-icon.angular-material-icons dashboard
-								p {{project.project}}
+								p {{model.model}}
 								span(flex)
 								md-button.md-icon-button(
 								aria-label="Add"
 								ng-click="vm.addToFederation($index)"
-								ng-if="!project.federated")
+								ng-if="!model.federated")
 									md-icon.angular-material-icons.md-accent add_circle
 
 				// Divider
@@ -52,15 +52,15 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 				div(layout="column", flex)
 					p(layout="row", layout-align="center center") Federated
 					md-list
-						div(ng-repeat="item in vm.newFederationData.subProjects", layout="column")
-							md-list-item.federationProject
+						div(ng-repeat="item in vm.newFederationData.subModels", layout="column")
+							md-list-item.federationModel
 								md-icon.angular-material-icons dashboard
-								p {{item.project}}
+								p {{item.model}}
 								span(flex)
 								md-button.md-icon-button(aria-label="Remove", ng-click="vm.removeFromFederation($index)")
 									md-icon.angular-material-icons.md-accent remove_circle
 							div(ng-if="vm.showRemoveWarning")
-								p#federationWarning This project cannot be removed. Please delete federation.
+								p#federationWarning This model cannot be removed. Please delete federation.
 
 			md-divider
 
@@ -69,4 +69,4 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 				md-button.md-raised.md-accent(ng-disabled="vm.newFederationButtonDisabled", ng-click="vm.saveFederation()") Save
 				md-button.md-accent(ng-click="vm.closeDialog()") Cancel
 
-			p.projectDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
+			p.modelDialogError(ng-if="vm.errorMessage") {{vm.errorMessage}}
