--- a/frontend/account/jade/uploadModelDialog.jade
+++ b/frontend/account/jade/uploadModelDialog.jade
@@ -1,7 +1,7 @@
-md-dialog.newProjectDialog(aria-label="New project")
+md-dialog.newModelDialog(aria-label="New model")
 	md-toolbar
 		.md-toolbar-tools
-			h2 Upload - {{vm.project.name}}
+			h2 Upload - {{vm.model.name}}
 			span(flex)
 			md-button.md-icon-button(ng-click="vm.closeDialog()")
 				md-icon.angular-material-icons(aria-label="Close dialog") close
@@ -19,8 +19,8 @@ md-dialog.newProjectDialog(aria-label="New project")
 				md-button.md-accent(ng-click="vm.selectFile()") Select File
 				md-button.md-raised.md-accent(ng-disabled="vm.uploadButtonDisabled", ng-click="vm.uploadFile()") Upload
 
-			#projectDialogFilenameContainer(layout="row", ng-if="vm.projectToUpload")
-				p#projectDialogFilenameIntro Selected file
-				p#projectDialogFilename {{vm.projectToUpload.name}}
+			#modelDialogFilenameContainer(layout="row", ng-if="vm.modelToUpload")
+				p#modelDialogFilenameIntro Selected file
+				p#modelDialogFilename {{vm.modelToUpload.name}}
 
-			p#projectDialogError(ng-if="vm.uploadErrorMessage") {{vm.uploadErrorMessage}}
+			p#modelDialogError(ng-if="vm.uploadErrorMessage") {{vm.uploadErrorMessage}}
