--- a/frontend/panel/css/panel.css
+++ b/frontend/panel/css/panel.css
@@ -1,3 +1,17 @@
+
+#panelCardFilterInput::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  color: white;
+}
+#panelCardFilterInput::-moz-placeholder { /* Firefox 19+ */
+  color: white;
+}
+#panelCardFilterInput:-ms-input-placeholder { /* IE 10+ */
+  color: white;
+}
+#panelCardFilterInput:-moz-placeholder { /* Firefox 18- */
+  color: white;
+}
+
 /** Panel *************************************************************************************************************/
 
 panel  {
@@ -28,7 +42,7 @@ panel #buttons .panelButtonGroup button {
 }
 panel #buttons .panelButtonGroup label {
   color: #FFFFFF;
-  text-shadow: 0 0 2px rgba(0,0,0,0.5);
+  text-shadow: 0 0 2px rgb(0, 0, 0);
   font-weight: bold;
   font-size: 14px;
 }
