--- a/frontend/bottomButtons/css/bottomButtons.css
+++ b/frontend/bottomButtons/css/bottomButtons.css
@@ -35,7 +35,7 @@ bottom-buttons #showButtonIcon {
 bottom-buttons .actionButton md-icon {
   color: #FFFFFF !important;
   font-size: 25px;
-  text-shadow: 0 0 2px rgba(0,0,0,0.5);
+  text-shadow: 0 0 2px #000;
 }
 
 bottom-buttons .viewingOptionButtons {
@@ -46,7 +46,7 @@ bottom-buttons .viewingOptionButtons {
 
 bottom-buttons label {
   color: #FFFFFF;
-  text-shadow: 0 0 2px rgba(0,0,0,0.5);
+  text-shadow: 0 0 2px #000;
   font-weight: bold;
   font-size: 14px;
 }
