--- a/frontend/rightPanel/css/rightPanel.css
+++ b/frontend/rightPanel/css/rightPanel.css
@@ -1,7 +1,7 @@
 right-panel {
     position: absolute;
     top: 70px;
-    right: 0;
+    right: 5px;
 }
 
 right-panel #rightPanelButtons .rightPanelButtonGroup {
@@ -18,7 +18,7 @@ right-panel #rightPanelButtons .fa {
 
 right-panel #rightPanelButtons label {
     color: #FFFFFF;
-    text-shadow: 0 0 2px rgba(0,0,0,0.5);
+    text-shadow: 0 0 2px rgb(0, 0, 0);
     font-weight: bold;
     font-size: 14px;
 }
