ISSUE #345 - rename project > model

--- a/frontend/account/jade/accountFederations.jade
+++ b/frontend/account/jade/accountFederations.jade
@@ -42,7 +42,7 @@
 
 					// Projects list
 					p.federationProjectsList
-						span(ng-repeat="subProject in federation.subProjects")
+						span(ng-repeat="subProject in federation.subModels")
 							| {{subProject.project}}
 							span(ng-if="!$last")
 								| ,
