--- a/frontend/account/jade/federationDialog.jade
+++ b/frontend/account/jade/federationDialog.jade
@@ -52,7 +52,7 @@ md-dialog#federationDialog(aria-label="Federation", flex-lg="80", flex-gt-lg="50
 				div(layout="column", flex)
 					p(layout="row", layout-align="center center") Federated
 					md-list
-						div(ng-repeat="item in vm.newFederationData.subProjects", layout="column")
+						div(ng-repeat="item in vm.newFederationData.subModels", layout="column")
 							md-list-item.federationProject
 								md-icon.angular-material-icons dashboard
 								p {{item.project}}
