ISSUE #345 - minimal changes in the frontend so that it is at least working

--- a/frontend/account/jade/accountProjects.jade
+++ b/frontend/account/jade/accountProjects.jade
@@ -20,7 +20,7 @@
 			// Projects
 			md-list.projects(ng-if="account.showProjects")
 				account-project(
-				ng-repeat="project in account.projects"
+				ng-repeat="project in account.models"
 				account="account.name"
 				is-account-admin="account.isAdmin"
 				project="project"
