Tidied up UI for the signup page

--- a/frontend/signUp/jade/signUp.jade
+++ b/frontend/signUp/jade/signUp.jade
@@ -4,4 +4,4 @@
 			.md-toolbar-tools
 				h2 Sign Up
 		.userContent(layout="column", layout-align="start center")
-			sign-up-form(button-label="Sign Up")
+			sign-up-form(button-label="Sign Up").sign-up-padding
