--- a/frontend/signUp/css/signUp.css
+++ b/frontend/signUp/css/signUp.css
@@ -30,10 +30,18 @@ sign-up-form #tc a {
     outline: none;
 }
 
-/*sign-up-form #loginCaptcha {
-    margin: 10px 30px 10px 0;
+sign-up-form .sign-up-button {
+    margin-left: 10%;
+    margin-right: 10%;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    width: 80%;
 }
-*/
+
+sign-up-form #loginCaptcha > div {
+    margin-left: 20px;  
+}
+
 sign-up-form #registerWait {
     height: 30px;
 }
@@ -58,8 +66,25 @@ sign-up-form .rc-anchor-light {
     background: red;
 }
 
+sign-up-form form md-input-container {
+    margin: 10px;
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
+
 sign-up-form #signUpFormHiddenInputs {
     position: absolute;
     top: 0;
     opacity: 0;
+}
+
+sign-up-form .bottom-links {
+    text-align: center;
+}
+
+@media (max-width: 600px) {
+    sign-up-form {
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
